--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
-    "@kot-shrodingera-team/config": "^1.0.0"
+    "@kot-shrodingera-team/config": "^1.0.16",
+    "@rollup/plugin-node-resolve": "^8.0.0"
+  },
+  "dependencies": {
+    "@rollup/plugin-typescript": "^4.1.2"
   }
 }
